--- a/LR.WebUI/Areas/Admin/Views/MaterialCategories/_TreeView.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/MaterialCategories/_TreeView.cshtml
@@ -20,8 +20,7 @@
         UpdateTargetId = "matcat-tv",
         EnableEditing = false,
         EnableFiltering = false,
-        FuncModelId= x => x.Id,
-        FuncRowClick=()=> "clickLookupRow(this)"
+        FuncModelId= x => x.Id
     },
     htmlAttributes: new { @class = "sx-tv table table-condensed table-bordered table-responsive" }
     )
