--- a/LR.WebUI/Views/Account/Login.cshtml
+++ b/LR.WebUI/Views/Account/Login.cshtml
@@ -54,6 +54,11 @@
             <div class="form-group">
                 <button type="submit" class="btn">Войти</button>
             </div>
+
+            <div class="form-group">
+                <p class="text-muted">У Вас нет аккаунта?</p>
+                <a href="@Url.Action("Register", "Account")" class="btn">Создать аккаунт</a>
+            </div>
         </form>
     </div>
 }
