--- a/LR.WebUI/Areas/Admin/Views/BannedUrls/Edit.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/BannedUrls/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxVMEditBannedUrl
+﻿@model SxVMBannedUrl
 @{
     var isNew = Model.Id == 0;
     ViewBag.Title = isNew ? "Добавить адрес в бан" : "Редактировать забаненный адрес \"" + Model.Url + "\"";
