--- a/LR.WebUI/Areas/Admin/Views/MaterialCategories/Edit.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/MaterialCategories/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxVMEditMaterialCategory
+﻿@model SxVMMaterialCategory
 @{
     var isNew = Model.Id == null;
     ViewBag.Title = isNew ? "Добавить категорию" : "Редактировать категорию \"" + Model.Title + "\"";
