--- a/LR.WebUI/Areas/Admin/Views/Redirects/Edit.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Redirects/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxVMEdit301Redirect
+﻿@model SxVM301Redirect
 @{
     var isNew = Model.Id == Guid.Empty;
     ViewBag.Title = isNew ? "Добавить 301 редирект" : "Редактировать 301 редирект для \"" + Model.OldUrl + "\"";
