--- a/LR.WebUI/Areas/Admin/Views/ShareButtons/Edit.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/ShareButtons/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxVMEditShareButton
+﻿@model SxVMShareButton
 @{
     var isNew = Model.Id == 0;
     ViewBag.Title = "Редактировать кнопку шар для сети "+Model.Net.Name;
