--- a/LR.WebUI/Areas/Admin/Views/UserRoles/Edit.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/UserRoles/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxVMEditAppRole
+﻿@model SxVMAppRole
 @{
     var isNew = string.IsNullOrEmpty(Model.Id);
     ViewBag.Title = isNew ? "Добавить роль" : "Редактировать роль \"" + Model.Name + "\"";
