--- a/LR.WebUI/Areas/Admin/Views/Users/Edit.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Users/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxVMEditAppUser
+﻿@model SxVMAppUser
 @{
     var isNew = string.IsNullOrEmpty(Model.Id);
     var userName = Model.NikName ?? Model.Email;
