--- a/LR.WebUI/Areas/Admin/Views/SeoTags/Edit.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/SeoTags/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SxVMEditSeoTags
+﻿@model SxVMSeoTags
 @{
     var isNew = Model.Id == 0;
     ViewBag.Title = isNew ? "Добавить SEO теги" : "Редактировать SEO теги для адреса\"" + Model.RawUrl + "\"";
