--- a/LR.WebUI/Views/Shared/_Navbar.cshtml
+++ b/LR.WebUI/Views/Shared/_Navbar.cshtml
@@ -12,7 +12,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Статьи <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="@Url.Action("List", "Articles")">Статьи <span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Фото</a></li>
                 <li><a href="#">Видео</a></li>
             </ul>
