--- a/LR.WebUI/Areas/Admin/Views/Users/_UserInfo.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/Users/_UserInfo.cshtml
@@ -24,6 +24,12 @@ else
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(x => x.Description)
+        @Html.EditorFor(x => x.Description, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите описание" } })
+        @Html.ValidationMessageFor(x => x.Description)
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(x => x.AvatarId)
         @Html.EditorFor(x => x.AvatarId, new { htmlAttributes = new { @class = "form-control", @placeholder = "Выберите аватар" } })
         @Html.ValidationMessageFor(x => x.AvatarId)
