--- a/LR.WebUI/Views/Shared/_Footer.cshtml
+++ b/LR.WebUI/Views/Shared/_Footer.cshtml
@@ -4,7 +4,7 @@
 }
 <footer>
     @Html.Action("Best", "Pictures")
-    @Html.Partial("_SocialGroups")
+    @Html.Action("SocialGroups", "SiteNets")
 
     <div class="container">
         <div class="text-center">
