--- a/LR.WebUI/less/site.less
+++ b/LR.WebUI/less/site.less
@@ -1613,6 +1613,7 @@ footer {
 
 .tags-cloud > li.current > a {
     color: @color-green-muted !important;
+    font-weight:700;
 }
 
 .tags-cloud > li > a:hover {
