--- a/LR.WebUI/Areas/Admin/Views/BannerGroups/Index.cshtml
+++ b/LR.WebUI/Areas/Admin/Views/BannerGroups/Index.cshtml
@@ -4,6 +4,9 @@
 }
 
 <h2>@ViewBag.Title</h2>
+<div class="alert alert-danger">
+    <b>Внимание!</b> Функционал пока не реализован. Решается вопрос о целесообразности внедрения в движок
+</div>
 <br />
 <div id="grid-banner-groups">
     @Html.Partial("_GridView", Model)
