--- a/LR.WebUI/less/site.less
+++ b/LR.WebUI/less/site.less
@@ -785,6 +785,7 @@ textarea.form-control {
     border-bottom: 0;
     margin-left: -7px;
     position: absolute;
+    left:50%;
 }
 
 //header-d-arrow
